# Scattering-Engineering

./: README.md  pyproject.toml
codes/disorder-generation/: bruit.m
codes/simulation/: Script_complet_modele_analytique_multiproc.py  wrapping_modele_analytique.py
notebooks/: Quickstart.ipynb
scattering_engineering/: disorder.py  model.py  wrapping_model.py
scattering_engineering/materials/: __init__.py  epsAg.py  epsAl.py  epsAu.py  epsBCB.py  epsBe.py  epsCo.py  epsCr.py  epsCu.py  epsDNT.py  epsFe.py  epsMo.py  epsNi.py  epsPb.py  epsPd.py  epsPt.py  epsSiC.py  epsSiNx.py  epsSiO2.py  epsTNT.py  epsTi.py  epsV.py  epsW.py  epsZnS.py
src/scattering-engineering/simulation/: wrapping_model.py
src/scattering_engineering/simulation/: model.py  wrapping_model.py
src/scattering_engineering/simulation/materials/: __init__.py  epsAg.py  epsAl.py  epsAu.py  epsBCB.py  epsBe.py  epsCo.py  epsCr.py  epsCu.py  epsDNT.py  epsFe.py  epsGaAs.py  epsGaAs2.py  epsMo.py  epsNi.py  epsPb.py  epsPd.py  epsPt.py  epsSiC.py  epsSiNx.py  epsSiO2.py  epsTNT.py  epsTi.py  epsV.py  epsW.py  epsZnS.py  modele graphenbe.TXT
tests/: GSG_optimization.py  context.py  full_script_example.py  full_script_parallel.py
