[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scattering_engineering"
version = "0.1"
author = [{name="Denis Langevin", email="denis.langevin@polytechnique.org"}]
description = "A package to compute the optical response of disordered arrays of 1D metallic grooves"
readme = "README.md"
requires-python = ">=3.5"
classifiers = ["Programming Language :: Python :: 3",
	       "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	       "Operating System :: OS Independent"]
[project.urls]
"Homepage" = "https://github.com/Milloupe/Scattering-Engineering"
